<resources>
    <string name="app_name">TSDC_Vinilos_Equipo_6</string>
    <string name="txt_no_comments">No hay comentarios para este álbum</string>
    <string name="title_albums">Albums</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_comments">Comentarios del álbum</string>
    <string name="title_artist">Artists</string>
    <string name="menu_usuario">Menu Usuario</string>
    <string name="menu_coleccionista">Menu Coleccionista</string>
    <string name="indique_su_tipo_de_usuario">Indique su tipo de Usuario</string>
    <string name="bienvenid">Bienvenid@</string>
    <string name="HolaUser">Hola Usuario</string>
    <string name="CatCollection">Catálogo de coleccionistas</string>
    <string name="CatArtist">Catálogo de artistas</string>
    <string name="CatAlbum">Catálogo de álbumes</string>
    <string name="listado_de_artistas">Listado de Artistas</string>
    <string name="picture_of_the_artist">Picture of the Artist</string>
    <string name="listado_de_albumes">Listado de Albumes</string>
    <string name="listado_de_collector">Listado de Coleccionistas</string>
    <string name="picture_of_collector">Picture of the Collector</string>
    <string name="picture_of_the_album">Picture of the Album</string>
    <string name="release_date_album">Fecha de Lanzamiento</string>
    <string name="album_description_tittle">Descripción</string>
    <string name="album_genre_tittle">Género</string>
    <string name="album_record_label_tittle">Disquera</string>
    <string name="album_artist_tittle">Artista</string>
    <string name="artist_detail_biography">Biografia</string>
    <string name="artist_detail_albumes_title">Albumes Principales</string>
    <string name="artist_detail_premios_title">Premios</string>
    <string name="album_detail_tracks_title">Tracks</string>
    <string name="comentarios_title">Comentarios</string>
    <string name="comentarios_descripcion">Descripción comentario</string>
    <string name="crear_album">Crear Album</string>
    <string name="crear_comentario">Crear Comentario</string>
    <string name="nuevo_album">Nuevo Álbum</string>
    <string name="crear_album_name_text">Nombre del álbum</string>
    <string name="crear_album_image_text">Imágen de Portada</string>
    <string name="crear_album_date_text">   MM/DD/AAAA</string>
    <string name="crear_album_descripcion_text">Descripción</string>
    <string name="crear_album_genero_text">Género</string>
    <string name="selected_item_genero">Seleccionar:</string>
    <string-array name="Generos">
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
        <item>Classical</item>
    </string-array>
    <string name="crear_album_disquera_text">Sello Discográfico</string>
    <string name="selected_item_disquera">Seleccionar:</string>
    <string-array name="Disquera">
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elecktra</item>
        <item>Fania Records</item>
    </string-array>
    <string name="crear_album_aceptar_button">Aceptar</string>
    <string name="crear_album_cancelar_button">Cancelar</string>
    <string name="valoration_field">Valoración</string>
    <string name="save_button">Guardar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="fecha_de_lanzamiento">Fecha de Lanzamiento</string>
    <string name="collector_phone_number">Telefono</string>
    <string name="collector_email">Email</string>
    <string name="collector_detail_albumes_title">Albumes Favoritos</string>
    <string name="valoracion_del_album_de_0_a_5_estrellas">Valoracion del Album de 0 a 5 estrellas</string>
    <string name="seleccione_un_genero_de_musica_para_el_album">Seleccione un genero de musica para el album</string>

</resources>