<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment_user"
    tools:context=".ui.MainFragment">

    <Button
        android:id="@+id/AlbumUserButton"
        android:layout_width="wrap_content"
        android:maxWidth="250dp"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:text="@string/CatAlbum"
        android:layout_above="@id/ArtistUserButton"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/ButtonGrey"
        android:textColor="@color/black"
        android:layout_marginBottom="18dip"
        android:textAllCaps="false"
        android:textSize="20sp"  />

    <Button
        android:id="@+id/ArtistUserButton"
        android:layout_width="wrap_content"
        android:maxWidth="250dp"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="18dip"
        android:backgroundTint="@color/ButtonGrey"
        android:text="@string/CatArtist"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ColecctionUserButton"
        android:layout_width="wrap_content"
        android:maxWidth="250dp"
        android:minHeight="100dp"
        android:layout_height="wrap_content"
        android:text="@string/CatCollection"
        android:textColor="@color/black"
        android:layout_below="@id/ArtistUserButton"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/ButtonGrey"
        android:textSize="20sp"  />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/AlbumUserButton"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginBottom="35dip"
        android:text="@string/HolaUser" android:textStyle="bold" />


</RelativeLayout >