<?xml version="1.0" encoding="utf-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragments.AlbumsFragment">

    <data>
        <variable
            name="album"
            type="com.example.tsdc_vinilos_equipo6.models.Album" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/albumImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:contentDescription="@string/picture_of_the_album"
            android:scaleType="fitXY"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints"
            android:src="@drawable/photo" />

        <TextView
            android:id="@+id/albumName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@{album.name}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/albumImage"
            tools:layout_editor_absoluteX="0dp"/>


        <TextView
            android:id="@+id/albumTitleReleased"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/release_date_album"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/albumName"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/albumReleasedDate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/albumTitleReleased"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/albumTitleDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/album_description_tittle"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/albumReleasedDate"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/albumDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@{album.description}"
            android:justificationMode="inter_word"
            app:layout_constraintTop_toBottomOf="@+id/albumTitleDescription"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/albumTitleGenre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/album_genre_tittle"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/albumDescription"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/albumGenre"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@{album.genre}"
            app:layout_constraintTop_toBottomOf="@+id/albumTitleGenre"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/albumTitleRecordLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/album_record_label_tittle"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/albumGenre"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/albumRecordLabel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            android:text="@{album.recordLabel}"
            app:layout_constraintTop_toBottomOf="@+id/albumTitleRecordLabel"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/albumTitleArtist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/album_artist_tittle"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/albumRecordLabel"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/albumArtist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/albumTitleArtist"
            tools:layout_editor_absoluteX="-16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>