<?xml version="1.0" encoding="utf-8" ?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"  >
    <!-- tools:context=".ui.fragments.AlbumsFragment"> ACTUALIZAR -->

    <data>
        <variable
            name="collector"
            type="com.example.tsdc_vinilos_equipo6.models.Collector" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/collectorImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:contentDescription="@string/picture_of_collector"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_editor_absoluteX="0dp"
            tools:ignore="MissingConstraints"
            android:src="@drawable/collector_photo" />

        <TextView
            android:id="@+id/collectorName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@{collector.name}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/collectorImage"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/collectorTitlePhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/collector_phone_number"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/collectorName"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/collectorPhone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@{collector.telephone}"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/collectorTitlePhone"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/collectorTitleEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/collector_email"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/collectorPhone"
            tools:layout_editor_absoluteX="0dp"/>

        <TextView
            android:id="@+id/collectorEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:text="@{collector.email}"
            android:textSize="17sp"
            app:layout_constraintTop_toBottomOf="@+id/collectorTitleEmail"
            tools:layout_editor_absoluteX="35dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>