<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AlbumDetailFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/album_detail_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="10dp"
                tools:layout_editor_absoluteY="-47dp"
                tools:listitem="@layout/album_detail_item" />

            <TextView
                android:id="@+id/title_tracks_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/album_detail_tracks_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/album_detail_rv"
                tools:layout_editor_absoluteX="0dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/album_tracks_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:maxHeight="5dp"
                tools:listitem="@layout/album_detail_tracks_item"
                app:layout_constraintTop_toBottomOf="@+id/title_tracks_tv"
                tools:layout_editor_absoluteX="0dp"/>

            <TextView
                android:id="@+id/title_comments_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/comentarios_title"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/album_tracks_rv"
                tools:layout_editor_absoluteX="0dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/album_comments_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:maxHeight="5dp"
                tools:listitem="@layout/album_detail_comments_item"
                app:layout_constraintTop_toBottomOf="@+id/title_comments_tv"
                tools:layout_editor_absoluteX="0dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="end|bottom"
        android:src="@drawable/baseline_add_circle_24"
        android:backgroundTint="@color/ButtonBlue"
        android:contentDescription="@string/crear_comentario"
        android:layout_margin="16dp" />

</RelativeLayout>